<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".announcement"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"

           >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lable"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/_3rd_national_conference_on_advanced_materials_and_applications"
                android:textSize="20sp"
                android:textColorLink="@color/black"
                android:id="@+id/an1"
                android:padding="2dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lable"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorLink="@color/purple_700"
                android:layout_marginLeft="3dp"
                android:text="@string/_4th_international_conference_on_information_systems_and_management_science_isms_2021"
                android:textSize="20sp"
                android:padding="2dp"
                android:id="@+id/an2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lable"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorLink="@color/black"
                android:layout_marginLeft="3dp"
                android:text="@string/eworkshop_on_computational_intelligence_and_blockchain_technology_cibt_21"
                android:textSize="20sp"
                android:padding="2dp"
                android:id="@+id/an3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lable"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:padding="2dp"
                android:text="@string/aicte_training_and_learning_atal_academy_sponsored_one_week_online_faculty_development_program_fdp_on_artificial_intelligence_and_machine_learning"
                android:id="@+id/an4"
                android:textColorLink="@color/purple_700"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lable"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/aicte_training_and_learning_atal_academy_sponsored_one_week_online_faculty_development_program_fdp_on_research_trends_in_separation_and_purification_techniques"
                android:textSize="20sp" android:id="@+id/an5"
                android:textColorLink="@color/black"
                android:padding="2dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="4dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lable"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:textColorLink="@color/purple_700"
                android:id="@+id/an6"
                android:text="@string/aicte_training_and_learning_atal_academy_sponsored_one_week_online_faculty_development_program_fdp_on_research_trends_in_separation_and_purification_techniques" android:padding="2dp" android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lable"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/faculty_development_programme_fdp"
                android:textSize="20sp"
                android:textColorLink="@color/black"
                android:padding="2dp"
                android:id="@+id/an7"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
           >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lable"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/certificate_courses_on_gis_and_autocad"
                android:padding="2dp"
                android:textSize="20sp"
                android:textColorLink="@color/purple_700"
                android:id="@+id/an8"/>
        </LinearLayout>

    </LinearLayout>



</androidx.core.widget.NestedScrollView>