<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center"
       android:paddingTop="50dp"
       android:layout_margin="5dp">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"

            card_view:cardBackgroundColor="@android:color/transparent"
            android:id="@+id/notice1">

       <LinearLayout
           android:layout_width="145dp"
           android:layout_height="147dp"
           android:gravity="center"
           android:outlineSpotShadowColor="@color/black"
            android:onClick="onClickHome"
           android:orientation="vertical">

           <ImageView
               android:layout_width="64dp"
               android:layout_height="64dp"
               android:layout_gravity="center"
               android:background="@drawable/circle_cyan"
               android:outlineAmbientShadowColor="@color/black"
               android:padding="10dp"
               android:src="@drawable/ic_notice"
               android:textAlignment="center" />

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_marginTop="10dp"
               android:background="@color/light_gray"
               android:layout_gravity="center"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="5dp"
               android:text="@string/upload_notice"
               android:textAlignment="center"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:gravity="center"/>
       </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
       <com.google.android.material.card.MaterialCardView
           android:layout_width="130dp"
           android:layout_height="150dp"
           android:layout_margin="10dp"
           card_view:cardBackgroundColor="@android:color/transparent"
           android:id="@+id/gallary">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"

           android:onClick="onIMG"
           android:gravity="center">

           <ImageView
               android:layout_width="64dp"
               android:layout_height="64dp"
               android:background="@drawable/circle_pink"
               android:src="@drawable/ic_gallery"
               android:padding="10dp"
                />

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@color/light_gray"
               android:layout_marginTop="10dp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/upload_images"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:padding="5dp" />
       </LinearLayout>
       </com.google.android.material.card.MaterialCardView>

   </LinearLayout>
    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center"
        android:paddingTop="50dp"
       android:layout_margin="5dp">

       <com.google.android.material.card.MaterialCardView
           android:layout_width="130dp"
           android:layout_height="150dp"
           android:layout_margin="10dp"
           card_view:cardBackgroundColor="@android:color/transparent"
           android:id="@+id/notice">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:onClick="getRank"
           android:gravity="center">

           <ImageView
               android:layout_width="64dp"
               android:layout_height="64dp"
               android:background="@drawable/circle_yellow"
               android:src="@drawable/ic_rank"
               android:padding="10dp"
                />

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@color/light_gray"
               android:layout_marginTop="10dp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/upload_ebook"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:padding="5dp" />
       </LinearLayout>
       </com.google.android.material.card.MaterialCardView>
       <com.google.android.material.card.MaterialCardView
           android:layout_width="130dp"
           android:layout_height="150dp"
           android:layout_margin="10dp"
           card_view:cardBackgroundColor="@android:color/transparent"
           android:id="@+id/teachers">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:onClick="callFac"
           android:gravity="center">

           <ImageView
               android:layout_width="64dp"
               android:layout_height="64dp"
               android:background="@drawable/circle_red"
               android:src="@drawable/ic_group"
               android:padding="10dp"
               />

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@color/light_gray"
               android:layout_marginTop="10dp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/faculties"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:padding="5dp" />
       </LinearLayout>
       </com.google.android.material.card.MaterialCardView>

   </LinearLayout>
    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center"
        android:paddingTop="50dp"
       android:layout_margin="5dp">

       <com.google.android.material.card.MaterialCardView
           android:layout_width="130dp"
           android:layout_height="150dp"
           android:layout_margin="10dp"
           card_view:cardBackgroundColor="@android:color/transparent"
           android:id="@+id/map">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:onClick="openmap"
           android:gravity="center">

           <ImageView
               android:layout_width="64dp"
               android:layout_height="64dp"
               android:background="@drawable/circle_green"
               android:src="@drawable/ic_baseline_map_24"
               android:padding="10dp"
                />

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@color/light_gray"
               android:layout_marginTop="10dp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="View Map"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:padding="5dp" />
       </LinearLayout>
       </com.google.android.material.card.MaterialCardView>
       <com.google.android.material.card.MaterialCardView
           android:layout_width="130dp"
           android:layout_height="150dp"
           android:layout_margin="10dp"
           card_view:cardBackgroundColor="@android:color/transparent"
           android:id="@+id/contactus">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:onClick="callCon"
           android:gravity="center">

           <ImageView
               android:layout_width="64dp"
               android:layout_height="64dp"
               android:background="@drawable/circle_blue"
               android:src="@drawable/ic_baseline_contacts_24"
               android:padding="10dp"
               />

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@color/light_gray"
               android:layout_marginTop="10dp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/contact_us"
               android:textStyle="bold"
               android:textColor="@color/black"
               android:padding="5dp" />
       </LinearLayout>
       </com.google.android.material.card.MaterialCardView>

   </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>